; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_output_prefix.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_output_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_options = type { i32, %struct.strbuf* (%struct.diff_options*, i32)* }
%struct.strbuf = type { i8* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.diff_options*)* @output_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @output_prefix(%struct.diff_options* %0) #0 {
  %2 = alloca %struct.diff_options*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.strbuf*, align 8
  store %struct.diff_options* %0, %struct.diff_options** %2, align 8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %5 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %6 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %5, i32 0, i32 1
  %7 = load %struct.strbuf* (%struct.diff_options*, i32)*, %struct.strbuf* (%struct.diff_options*, i32)** %6, align 8
  %8 = icmp ne %struct.strbuf* (%struct.diff_options*, i32)* %7, null
  br i1 %8, label %9, label %21

9:                                                ; preds = %1
  %10 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %11 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %10, i32 0, i32 1
  %12 = load %struct.strbuf* (%struct.diff_options*, i32)*, %struct.strbuf* (%struct.diff_options*, i32)** %11, align 8
  %13 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %14 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %15 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call %struct.strbuf* %12(%struct.diff_options* %13, i32 %16)
  store %struct.strbuf* %17, %struct.strbuf** %4, align 8
  %18 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %3, align 8
  br label %21

21:                                               ; preds = %9, %1
  %22 = load i8*, i8** %3, align 8
  ret i8* %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
